main/default/objects/Band_solution__c/Band_solution__c.object-meta.xml
<CustomObject>
    <label>Band (solution)</label>
    <nameField>
        <label>Band (solution) Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bands (solution)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>