main/default/objects/Band_solution__c/fields/Has_piano__c.field-meta.xml
<CustomField>
    <fullName>Has_piano__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has piano</label>
    <type>Checkbox</type>
</CustomField>