main/default/objects/Band_solution__c/fields/Headliner__c.field-meta.xml
<CustomField>
    <fullName>Headliner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Headliner</label>
    <type>Checkbox</type>
</CustomField>