main/default/objects/Band_solution__c/fields/Manager_Phone__c.field-meta.xml
<CustomField>
    <fullName>Manager_Phone__c</fullName>
    <label>Manager Phone</label>
    <type>Phone</type>
</CustomField>