main/default/objects/Band_solution__c/fields/Special_Requests__c.field-meta.xml
<CustomField>
    <fullName>Special_Requests__c</fullName>
    <description>Any special requests the band might have.</description>
    <label>Special Requests</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>